<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_settings">SearchSettingsActivity</string>
    <string name="advance_search_options_title">Advance Search Options</string>
    <string name="image_size_filter">Image Size</string>
    <string name="image_type_filter">Image Type</string>
    <string name="image_color_filter">Color</string>
    <string name="search_site_filter">Search Site</string>
	<string name="image_display_share_title">Share</string>
	<string name="search_menu_settings_title">Settings</string>
    
    <string-array name="image_size_filter_array">
        <item></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string-array name="image_color_filter_array">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type_filter_array">
        <item></item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string name="title_activity_image_display">Image</string>

</resources>